[gd_scene load_steps=18 format=3 uid="uid://bf1bnyatox02v"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_37cfn"]
[ext_resource type="Texture2D" uid="uid://bqyx3gryrdkmb" path="res://assets/play_button.png" id="1_uu4ua"]
[ext_resource type="Texture2D" uid="uid://gb4pbpuyj277" path="res://assets/background.png" id="1_vqfx0"]
[ext_resource type="Texture2D" uid="uid://df6qlg3wwht2" path="res://assets/exit_button.png" id="2_p5v6e"]
[ext_resource type="Texture2D" uid="uid://d0hgmm8muxhfa" path="res://assets/title.png" id="3_83lm0"]
[ext_resource type="Texture2D" uid="uid://dhruwpmbsdk4v" path="res://assets/drrr.png" id="6_vxeh2"]
[ext_resource type="Texture2D" uid="uid://db14hpv055e82" path="res://assets/fallen.png" id="7_h3svl"]
[ext_resource type="Texture2D" uid="uid://b2hkar4bamabx" path="res://assets/comic/panel 1/panel1bg.png" id="7_kjdxr"]
[ext_resource type="Texture2D" uid="uid://d13qw72epfoo1" path="res://assets/comic/panel 2/panel2bg.png" id="8_1p455"]
[ext_resource type="Texture2D" uid="uid://cde6a3bse58ti" path="res://assets/comic/panel 1/panel1text.png" id="8_mvgxo"]
[ext_resource type="Texture2D" uid="uid://dljd2m8wk065w" path="res://assets/comic/panel 3/panel3bg.png" id="9_wy8jd"]
[ext_resource type="Texture2D" uid="uid://c1kr2x3sy2nuy" path="res://assets/comic/panel 2/panel2text.png" id="10_lwpad"]
[ext_resource type="Texture2D" uid="uid://lnu16hlkrlgd" path="res://assets/comic/panel 2/panel2text2.png" id="11_u1g4s"]
[ext_resource type="Texture2D" uid="uid://cgknkriu8h4tk" path="res://assets/comic/panel 3/panel3text.png" id="13_733eu"]
[ext_resource type="Texture2D" uid="uid://c64vikndc13vt" path="res://assets/comic/panel 3/panel3text2.png" id="14_b8bxc"]
[ext_resource type="Texture2D" uid="uid://tcrywmwem7l4" path="res://assets/comic/panel 3/panel3drrr.png" id="15_wtpe3"]
[ext_resource type="Texture2D" uid="uid://dp7r71odlrstq" path="res://assets/eye.png" id="16_gi5x7"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_37cfn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="UI"]
modulate = Color(0.458405, 0.458405, 0.458405, 1)
offset_right = 1153.0
offset_bottom = 646.0
texture = ExtResource("1_vqfx0")
expand_mode = 1

[node name="Title" type="TextureRect" parent="UI"]
offset_right = 1151.0
offset_bottom = 646.0
texture = ExtResource("3_83lm0")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="UI"]
offset_top = 312.0
offset_right = 1151.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2

[node name="PlayButton" type="TextureButton" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(238, 166)
layout_mode = 2
texture_normal = ExtResource("1_uu4ua")
ignore_texture_size = true
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(238, 166)
layout_mode = 2
texture_normal = ExtResource("2_p5v6e")
ignore_texture_size = true
stretch_mode = 0

[node name="DRRR" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="Panel" parent="DRRR"]
modulate = Color(0, 0, 0, 1)
offset_right = 1151.0
offset_bottom = 647.0

[node name="DRRR1" type="TextureRect" parent="DRRR"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(185, 53)
offset_left = 130.0
offset_top = 80.0
offset_right = 315.0
offset_bottom = 133.0
texture = ExtResource("6_vxeh2")
expand_mode = 1

[node name="DRRR2" type="TextureRect" parent="DRRR"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(370, 107)
offset_left = 702.0
offset_top = 232.0
offset_right = 1072.0
offset_bottom = 339.0
texture = ExtResource("6_vxeh2")
expand_mode = 1

[node name="DRRR3" type="TextureRect" parent="DRRR"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(370, 107)
offset_left = 72.0
offset_top = 469.0
offset_right = 442.0
offset_bottom = 576.0
texture = ExtResource("6_vxeh2")
expand_mode = 1

[node name="DRRR4" type="TextureRect" parent="DRRR"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(370, 107)
offset_left = 436.0
offset_top = 443.0
offset_right = 1155.0
offset_bottom = 743.0
texture = ExtResource("7_h3svl")
expand_mode = 1
stretch_mode = 6

[node name="Comic" type="CanvasLayer" parent="."]
visible = false

[node name="BlackBackground" type="Panel" parent="Comic"]
modulate = Color(0, 0, 0, 1)
offset_right = 1151.0
offset_bottom = 647.0

[node name="Panel1" type="Control" parent="Comic"]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 646.0

[node name="Background" type="TextureRect" parent="Comic/Panel1"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0
texture = ExtResource("7_kjdxr")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Text" type="TextureRect" parent="Comic/Panel1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 738.0
offset_top = 354.0
offset_right = 1151.0
offset_bottom = 648.0
texture = ExtResource("8_mvgxo")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Panel2" type="Control" parent="Comic"]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 646.0

[node name="Background" type="TextureRect" parent="Comic/Panel2"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0
texture = ExtResource("8_1p455")
expand_mode = 1

[node name="Text" type="TextureRect" parent="Comic/Panel2"]
layout_mode = 0
offset_left = 1.0
offset_top = -54.0
offset_right = 704.0
offset_bottom = 423.0
texture = ExtResource("11_u1g4s")
expand_mode = 1
stretch_mode = 5

[node name="Text2" type="TextureRect" parent="Comic/Panel2"]
layout_mode = 0
offset_left = 495.0
offset_top = 183.0
offset_right = 1147.0
offset_bottom = 727.0
texture = ExtResource("10_lwpad")
expand_mode = 1
stretch_mode = 5

[node name="Panel3" type="Control" parent="Comic"]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 646.0

[node name="Background" type="TextureRect" parent="Comic/Panel3"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0
texture = ExtResource("9_wy8jd")
expand_mode = 1

[node name="Text" type="TextureRect" parent="Comic/Panel3"]
layout_mode = 0
offset_left = 1.0
offset_top = -241.0
offset_right = 741.0
offset_bottom = 372.0
texture = ExtResource("13_733eu")
expand_mode = 1
stretch_mode = 5

[node name="Text2" type="TextureRect" parent="Comic/Panel3"]
layout_mode = 0
offset_left = 589.0
offset_top = 361.0
offset_right = 1154.0
offset_bottom = 814.0
texture = ExtResource("14_b8bxc")
expand_mode = 1
stretch_mode = 5

[node name="DRRR1" type="TextureRect" parent="Comic/Panel3"]
layout_mode = 0
offset_left = 786.0
offset_top = 162.0
offset_right = 1076.0
offset_bottom = 363.0
texture = ExtResource("15_wtpe3")
expand_mode = 1
stretch_mode = 5

[node name="DRRR2" type="TextureRect" parent="Comic/Panel3"]
layout_mode = 0
offset_left = 34.0
offset_top = 241.0
offset_right = 522.0
offset_bottom = 588.0
texture = ExtResource("15_wtpe3")
expand_mode = 1
stretch_mode = 5

[node name="Eye" type="TextureRect" parent="Comic/Panel3"]
layout_mode = 0
offset_left = 481.0
offset_top = 182.0
offset_right = 624.0
offset_bottom = 245.0
texture = ExtResource("16_gi5x7")
expand_mode = 1
stretch_mode = 5

[connection signal="mouse_entered" from="UI/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="UI/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="UI/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
